--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -257,7 +257,7 @@
     let data = {
         special_values: get_special_values(),
         test_hash: hash,
-        fingerprint_js: visitorId,
+        fingerprint_js: document.getElementById('canvas-hash').textContent,
         system_timezone: tz,
     }
 
