--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -13,7 +13,7 @@
                 Identify </div>
             <div class="collapse show" id="collapseExample0">
                 <div class="card-body">
-                    <div id="main_section"></div>
+                    <div id="main_section" style="line-height: 30px;"></div>
                 </div>
             </div>
         </div>
