--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <div class="card border-danger mb-3">
+        <!-- <div class="card border-danger mb-3">
             <div class="card-header text-white bg-head mb-3 margin0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample">
                 Proxy section </div>
             <div class="collapse show" id="collapseExample4">
@@ -62,11 +62,11 @@
                     {% for key, value in proxy_info.all_ips.items %}
                         <p><strong>{{ key }}:</strong> &nbsp; {{ value }}</p>
                     {% endfor %}
-                    <!-- <b>Сonclusion:&nbsp;</b> <span style="margin-right: 100px;"> {{ proxy_info.proxy_value }} </span> -->
+                    <b>Сonclusion:&nbsp;</b> <span style="margin-right: 100px;"> {{ proxy_info.proxy_value }} </span>
                     <b>Сonclusion:&nbsp;</b> <span style="margin-right: 100px;">  </span>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="card border-danger mb-3">
             <div class="card-header text-white bg-head mb-3 margin0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample5" aria-expanded="false" aria-controls="collapseExample">
